k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: microservices
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: shopmate.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: login-service
            port:
              number: 7001
      - path: /payment
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 8001
      - path: /analytics
        pathType: Prefix
        backend:
          service:
            name: analytics-service
            port:
              number: 8000
      - path: /kafka-ui
        pathType: Prefix
        backend:
          service:
            name: kafka-ui-service
            port:
              number: 8080
